# Aether

./: .env.example  .gitignore  Cargo.toml  Dockerfile.app  Dockerfile.app.local  README.md  dev.sh  docker-compose.build.yml  docker-compose.yml  install.sh
aether-proxy/: README.md
crates/aether-ai-formats/: Cargo.toml
crates/aether-ai-formats/src/: api.rs  canonical.rs  formats.rs  lib.rs  matrix.rs  registry.rs
crates/aether-ai-formats/src/conversion/: mod.rs
crates/aether-ai-formats/src/conversion/request/: mod.rs
crates/aether-ai-formats/src/conversion/response/: mod.rs
crates/aether-ai-formats/src/formats/claude_messages/: request.rs  response.rs
crates/aether-ai-formats/src/formats/gemini_generate_content/: request.rs  response.rs
crates/aether-ai-formats/src/formats/openai_chat/: request.rs  response.rs
crates/aether-ai-formats/src/formats/openai_responses/: request.rs  response.rs
crates/aether-ai-formats/src/formats/shared/: sync_products.rs
crates/aether-ai-formats/src/protocol/: canonical.rs
crates/aether-ai-formats/src/provider_compat/proxy/: rules.rs
crates/aether-ai-formats/src/request/: matrix.rs  mod.rs  openai.rs  route.rs
crates/aether-ai-pipeline/: Cargo.toml
crates/aether-ai-pipeline/src/: api.rs  transport.rs
crates/aether-ai-pipeline/src/contracts/: mod.rs  plan_kinds.rs  report_kinds.rs
crates/aether-ai-pipeline/src/conversion/: canonical.rs  error.rs  mod.rs  registry.rs
crates/aether-ai-pipeline/src/finalize/: stream_rewrite.rs  sync_products.rs
crates/aether-ai-pipeline/src/planner/: common.rs  route.rs
(+1185 files in other folders)
