[package]
name = "aether-ai-formats"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Canonical AI format IR and adapters for Aether"

[dependencies]
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
