[package]
name = "aether-ai-pipeline"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared AI pipeline contracts and planner logic for Aether"

[dependencies]
aether-ai-formats.workspace = true
aether-contracts.workspace = true
aether-usage-runtime.workspace = true
base64.workspace = true
http.workspace = true
serde.workspace = true
serde_json.workspace = true
aether-provider-transport.workspace = true
sha1 = "0.10"
sha2.workspace = true
uuid.workspace = true
